<resources>
    <string name="app_name">AfroApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="View_questions">Vie_questions</string>
    <string name="Comments">Comments</string>
    <string name="title_activity_listquestions">Listquestions</string>
    <string name="title_activity_listcomments">Listcomments</string>
    <string name="View_list">View_list</string>
    <string name="title_activity_profile_add">ProfileAdd</string>
    <string name="email_address">Email Address</string>
    <string name="home">Home</string>
    <string name="submitt">Submitt</string>
    <string name="email">email</string>
    <string name="Emaik_Add">Email_Add:</string>
    <string name="Email_Add">Email_Add</string>
    <string name="full_name">Full Name:</string>
    <string name="proficiency">Proficiency:</string>
    <string name="location">Location:</string>
    <string name="title_activity_add">Add</string>
    <string name="title_activity_add_prof">activity_add_prof</string>
    <string name="profile">profile</string>
    <string name="question">question</string>
    <string name="Add_Profile">Add_Profile</string>
    <string name="AfroDevMeet">AfroDevMeet</string>
    <string name="post_question">post question</string>
    <string name="Signout">SignOut</string>
    <string name="facebook_application_id" translatable="false">371042157245845</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb371042157245845</string>
    <string name="Welcome">Welcome</string>
    <string name="post">Post</string>
    <string name="logo_image">logo_image</string>
    <string name="title_activity_mentor_list">MentorList</string>
    <string name="mentor_pic">mentor_pic</string>
    <string name="post_a_question">Post a question</string>
    <string name="send_post">send post</string>
    <string name="back_home">Back home</string>
    <string name="comment">comment</string>
    <string name="question_solu">Question</string>
    <string name="username">username</string>
    <string name="solution">Solution</string>
    <string name="Mentor">Mentor</string>
    <string name="title_activity_prof">Prof</string>
    <string name="languages">laptop</string>
    <string name="Fullname">Fullname</string>
    <string name="title_activity_profile">Profile</string>
    <string name="Edit">Edit</string>
    <string name="title">title</string>
    <string name="SignUp">SignUp</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="Add_post">Add_post</string>
</resources>
