<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MyProfile"
    tools:showIn="@layout/activity_my_profile">

        <ImageView
            android:id="@+id/myprof_pic"
            android:layout_width="230dp"
            android:layout_height="169dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/mentor_pic"
            android:tint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.396"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/placeholder" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#BDBDBD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myprof_pic" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="#BDBDBD"
            android:contentDescription="@string/mentor_pic"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="#BDBDBD"
            android:contentDescription="@string/mentor_pic"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="#BDBDBD"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="26dp"
            android:layout_height="35dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/profile"
            app:layout_constraintEnd_toStartOf="@+id/myprof_pic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:srcCompat="@drawable/placeholder" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/languages"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            app:srcCompat="@drawable/ic_code_black_18dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/languages"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/divider3"
            app:srcCompat="@drawable/ic_location_on_black_24dp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/email_address"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/divider4"
            app:srcCompat="@drawable/ic_email_black_24dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="77dp"
            android:layout_height="35dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/submitt_shape"
            android:onClick="Editprofile"
            android:text="@string/Edit"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/myprof_pic"
            app:layout_constraintTop_toTopOf="@+id/myprof_pic" />

        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/Fullname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/prof_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proficiency"
            app:layout_constraintEnd_toEndOf="@+id/full_name"
            app:layout_constraintStart_toStartOf="@+id/full_name"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
            android:id="@+id/location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            app:layout_constraintEnd_toEndOf="@+id/full_name"
            app:layout_constraintStart_toStartOf="@+id/full_name"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            tools:layout_editor_absoluteX="319dp"
            tools:layout_editor_absoluteY="382dp" />

</androidx.constraintlayout.widget.ConstraintLayout>