<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Prof"
    tools:showIn="@layout/activity_prof">

    <ImageView
        android:id="@+id/myprof_pic"
        android:layout_width="230dp"
        android:layout_height="169dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/mentor_pic"
        android:tint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/placeholder" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#BDBDBD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myprof_pic" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#BDBDBD"
        android:contentDescription="@string/mentor_pic"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/fullname_text" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#BDBDBD"
        android:contentDescription="@string/mentor_pic"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/profciency_text" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#BDBDBD"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/loc_text" />

    <TextView
        android:id="@+id/fullname_text"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Fullname"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toEndOf="@+id/myprof_pic"
        app:layout_constraintTop_toBottomOf="@+id/myprof_pic" />

    <TextView
        android:id="@+id/profciency_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/proficiency"
        app:layout_constraintEnd_toEndOf="@+id/fullname_text"
        app:layout_constraintStart_toStartOf="@+id/fullname_text"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/loc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="@+id/fullname_text"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <TextView
        android:id="@+id/email_addtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Email_Add"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/fullname_text"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="60dp"
        android:contentDescription="@string/profile"
        app:layout_constraintEnd_toStartOf="@+id/myprof_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fullname_text"
        app:srcCompat="@drawable/placeholder" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/languages"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/profciency_text"
        app:srcCompat="@drawable/ic_code_black_18dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/languages"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/loc_text"
        app:srcCompat="@drawable/ic_location_on_black_24dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/email_address"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/email_addtext"
        app:srcCompat="@drawable/ic_email_black_24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>